--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Daniel | Portfolio</title>
+    <title>Lenni | Portfolio</title>
     <meta http-equiv="content-language" content="en" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       key="desc"
       name="keywords"
-      content="website, blog, portfolio, Daniel Jebarson"
-    />
+      content="website, blog, portfolio, Daniel Jebarson" />
     <meta property="og:title" content="Portfolio" />
     <meta
       property="og:description"
-      content="This is the portfolio website of Daniel Jebarson K done with React and TailwindCSS"
-    />
+      content="This is the portfolio website of Daniel Jebarson K done with React and TailwindCSS" />
     <meta name="author" content="Daniel Jebarson" />
     <meta name="publisher" content="Daniel Jebarson" />
     <meta name="copyright" content="Daniel Jebarson" />
     <meta
       name="description"
-      content="This is the portfolio website of Daniel Jebarson done with React and TailwindCSS"
-    />
+      content="This is the portfolio website of Daniel Jebarson done with React and TailwindCSS" />
     <meta name="page-topic" content="Portfolio" />
     <meta name="page-type" content="Portfolio" />
     <meta name="audience" content="Everyone" />
